<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="252dp"
        android:layout_height="302dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_button_double" />

    <Button
        android:id="@+id/view_diff_button_selectionMode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:text="@string/dialog_item_view_button_selectionMode"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <Button
        android:id="@+id/view_diff_button_sort"
        android:layout_width="113dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/dialog_item_view_button_sort"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@id/imageView15" />

    <Button
        android:id="@+id/view_diff_button_find"
        android:layout_width="113dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/dialog_item_view_button_search_item"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@id/imageView15"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/view_diff_button_showstats"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@android:color/transparent"
        android:text="@string/dialog_item_view_button_statistics"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="220dp"
        android:layout_height="5dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/view_diff_button_selectionMode"
        app:srcCompat="@drawable/ic_line_main_long" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="219dp"
        android:layout_height="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view_diff_button_showstats"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:srcCompat="@drawable/ic_line_main_long" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="5dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="73dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line_horizontal_main" />

</androidx.constraintlayout.widget.ConstraintLayout>